--- a/css/style.css
+++ b/css/style.css
@@ -42891,7 +42891,13 @@ ul.children {
   width: 155px;
   height: 155px;
   box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.7);
-  background-color: #aa8453;
+  background: linear-gradient(202deg, #c1975d 13.04%, #5b472c 85.96%);
+  display: inline-block;
+  padding: 15px;
+  border-radius: 50%;
+  position: relative;
+  width: 60px;
+  height: 60px;
   border-radius: 50%;
   background-size: cover;
   background-repeat: no-repeat;
@@ -44702,96 +44708,31 @@ ul.children {
   right: 0;
 }
 
-.feature-area.style-2 {
-  padding-top: 118px;
-  padding-bottom: 120px;
+.video-popup-area.style-1 .section-title .para {
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 30px;
+  color: #aa8453;
 }
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .feature-area.style-2 {
-    padding: 100px 0;
-  }
+.video-popup-area.style-1 .section-title .para span {
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 29px;
+  color: #222;
 }
-@media only screen and (min-width: 0px) and (max-width: 767px) {
-  .feature-area.style-2 {
-    padding: 80px 0;
-  }
-}
-.feature-area.style-2 .section-title {
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  gap: 0;
-}
-.feature-area.style-3 {
-  padding-top: 120px;
-  padding-bottom: 120px;
+.video-popup-area.style-1 .gift-card {
+  padding: 60px 88px;
+  padding-top: 82px;
+  background-color: #222;
+  border-left: 12px solid #aa8453;
   position: relative;
 }
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .feature-area.style-3 {
-    padding: 100px 0;
-  }
-}
-@media only screen and (min-width: 0px) and (max-width: 767px) {
-  .feature-area.style-3 {
-    padding: 80px 0;
-  }
-}
-.feature-area.style-3 .feature-bg {
+.video-popup-area.style-1 .gift-card .shape {
   position: absolute;
-  right: 0;
-  bottom: 0;
-  z-index: -1;
-}
-.feature-area.style-3 .section-title {
-  margin-bottom: 60px;
-}
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .feature-area.style-3 .section-title {
-    margin-bottom: 40px;
-  }
-}
-@media only screen and (min-width: 0px) and (max-width: 767px) {
-  .feature-area.style-3 .section-title {
-    margin-bottom: 40px;
-  }
-}
-@media only screen and (min-width: 0px) and (max-width: 767px) {
-  .feature-area.style-3 .section-title.two-column {
-    gap: 10px;
-  }
-}
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .feature-area.style-3 .section-title.two-column {
-    gap: 10px;
-  }
-}
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
-  .feature-area.style-3 .section-title.two-column {
-    gap: 10px;
-  }
-}
-.feature-area.style-3 .section-title .title {
-  margin-bottom: 0;
-}
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
-  .feature-area.style-3 .section-title .title {
-    font-size: 42px;
-  }
-}
-.feature-area.style-3 .section-title .sec-desc {
-  margin-right: -3px;
-}
-@media (min-width: 1400px) {
-  .feature-area.style-3 .section-title .sec-desc {
-    width: 525px;
-  }
-}
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
-  .feature-area.style-3 .section-title .sec-desc {
-    margin-bottom: 0;
-    width: 420px;
-  }
+  bottom: 20px;
+  right: 60px;
 }
 
 @media only screen and (min-width: 0px) and (max-width: 576px) {
