--- a/sass/partials/_theme-default.scss
+++ b/sass/partials/_theme-default.scss
@@ -576,6 +576,7 @@ input.theme-btn {
 .custom-container {
   max-width: 1628px;
   margin: 0 auto;
+  padding: 0 12px;
   @include rmaxwd(1700) {
     max-width: 1500px;
   }
