--- a/sass/partials/_menu-sidebar.scss
+++ b/sass/partials/_menu-sidebar.scss
@@ -5,7 +5,7 @@
     justify-content: center;
 
     i {
-      color: $black;
+      color: $primary-color;
       font-size: 22px;
     }
   }
@@ -18,7 +18,7 @@
   height: 100%;
   background-color: $white;
   overflow-y: scroll;
-  transition: all .3s cubic-bezier(0.785, 0.135, 0.15, 0.86);
+  transition: all 0.3s cubic-bezier(0.785, 0.135, 0.15, 0.86);
   z-index: 9999;
 
   @include rmaxwd(560) {
@@ -50,15 +50,13 @@
       background-color: $primary-color;
       color: $white;
 
-      &:hover{
+      &:hover {
         background-color: $primary-color;
       }
     }
   }
   // Contact Info
   .menu-sidebar-content {
-
-
     .menu-sidebar-single-widget {
       display: inline-block;
       margin-top: 20px;
@@ -85,7 +83,7 @@
           width: 100%;
 
           &.contact-info-item {
-            gap:0 10px !important;
+            gap: 0 10px !important;
           }
           a {
             display: flex;
@@ -117,11 +115,10 @@
         }
       }
     }
-
   }
 }
 
-.body-overlay{
+.body-overlay {
   background-color: rgba(0, 0, 0, 0.6);
   height: 100%;
   width: 100%;
@@ -137,8 +134,7 @@
     opacity: 1;
     visibility: visible;
   }
-  &:hover{
+  &:hover {
     cursor: pointer;
   }
-
 }
