--- a/sass/modules/slider/_slider-style-two.scss
+++ b/sass/modules/slider/_slider-style-two.scss
@@ -4,6 +4,9 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+    @include rmaxwd(991) {
+      padding-top: 100px;
+    }
     .overlay {
       position: absolute;
       width: 100%;
@@ -33,8 +36,16 @@
       }
     }
     .slider-wrapper {
+      .single-slider-wrapper {
+        @include rmaxwd(991) {
+          padding-top: 90px;
+        }
+      }
       .single-slider {
         padding-top: 90px;
+        @include sm {
+          padding-top: 0;
+        }
         .slider-content-wrapper {
           position: absolute;
           top: 50%;
@@ -54,6 +65,20 @@
             }
           }
         }
+        .image-wrapper {
+          @include sm {
+            height: 300px;
+            img {
+              height: 300px;
+            }
+          }
+          @include md {
+            height: 350px;
+            img {
+              height: 350px;
+            }
+          }
+        }
       }
       .slick-dots {
         right: 50%;
@@ -63,6 +88,14 @@
         margin: 0;
         padding: 0;
         transform: translate(50%, 0);
+        @include rmaxwd(1199) {
+          bottom: 80px;
+        }
+        @include sm {
+          position: absolute;
+          left: unset;
+          bottom: 42px;
+        }
         li {
           display: flex;
           align-items: center;
@@ -73,6 +106,14 @@
             height: 108px;
             border-radius: 50%;
             overflow: hidden;
+            @include rmaxwd(1199) {
+              width: 60px;
+              height: 60px;
+            }
+            @include sm {
+              width: 30px;
+              height: 30px;
+            }
             img {
               width: 100%;
               height: 100%;
@@ -82,6 +123,14 @@
             button {
               width: 100px;
               height: 100px;
+              @include rmaxwd(1199) {
+                width: 50px;
+                height: 50px;
+              }
+              @include sm {
+                width: 25px;
+                height: 25px;
+              }
             }
           }
         }
