--- a/sass/style.scss
+++ b/sass/style.scss
@@ -230,6 +230,7 @@ Footer
 
 // Roomc-card
 @import 'modules/room-card/room-card';
+@import 'modules/room-card/room-card-two';
 
 // Blog-card
 @import 'modules/blog-card/blog-card';
