--- a/sass/pages/_home-one.scss
+++ b/sass/pages/_home-one.scss
@@ -704,6 +704,9 @@
     padding-left: 40px;
     position: relative;
     margin-top: -196px;
+    @include rmaxwd(1700) {
+      margin-top: -100px;
+    }
     @include lg {
       margin-top: -100px;
     }
