--- a/sass/partials/_title-section.scss
+++ b/sass/partials/_title-section.scss
@@ -162,20 +162,23 @@
     line-height: normal;
     text-transform: uppercase;
     margin-bottom: 0;
-    color: $white;
+    color: transparent;
     text-wrap: nowrap;
-    transform: translate(-8%, -33%);
+    transform: translate(-8%, -15%);
+    span {
+      color: $white;
+    }
     @include rmaxwd(1700) {
       font-size: 170px;
-      transform: translate(0, -33%);
+      transform: translate(0, -15%);
     }
     @include rmaxwd(1399) {
       font-size: 140px;
-      transform: translate(0, -23%);
+      transform: translate(0, -15%);
     }
     @include rmaxwd(1199) {
       font-size: 120px;
-      transform: translate(0, -33%);
+      transform: translate(0, -15%);
     }
     @include rmaxwd(991) {
       font-size: 80px;
