--- a/css/style.css
+++ b/css/style.css
@@ -74746,16 +74746,66 @@ ul.children {
   position: relative;
   overflow: hidden;
 }
+@media only screen and (min-width: 1200px) and (max-width: 1399px) {
+  .room_and_suites.style-2 {
+    padding-bottom: 120px;
+  }
+}
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .room_and_suites.style-2 {
+    padding-top: 60px;
+    padding-bottom: 100px;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .room_and_suites.style-2 {
+    padding-top: 60px;
+    padding-bottom: 80px;
+  }
+}
+@media only screen and (min-width: 0px) and (max-width: 767px) {
+  .room_and_suites.style-2 {
+    padding-top: 60px;
+    padding-bottom: 80px;
+  }
+}
 .room_and_suites.style-2 .bg-image {
   position: absolute;
   right: 0;
   top: 0;
+}
+@media (max-width: 1399px) {
+  .room_and_suites.style-2 .bg-image {
+    width: 50%;
+    height: 100%;
+  }
+}
+@media (max-width: 1399px) {
+  .room_and_suites.style-2 .bg-image img {
+    width: 100%;
+    height: 100%;
+  }
+}
+@media (max-width: 991px) {
+  .room_and_suites.style-2 .bg-image {
+    display: none;
+  }
 }
 .room_and_suites.style-2 .banner-text {
   position: absolute;
   left: 0;
   bottom: 0;
   transform: translate(50px, 50px);
+}
+@media (max-width: 1399px) {
+  .room_and_suites.style-2 .banner-text {
+    transform: translate(50px, 30px);
+  }
+}
+@media (max-width: 991px) {
+  .room_and_suites.style-2 .banner-text {
+    transform: translate(50px, 0);
+  }
 }
 .room_and_suites.style-2 .banner-text p {
   transform: none;
@@ -74767,6 +74817,11 @@ ul.children {
   margin-top: 0;
   padding-left: 250px;
 }
+@media (max-width: 1699px) {
+  .room_and_suites.style-2 .room-card-wrapper-two {
+    padding-left: 0;
+  }
+}
 .room_and_suites.style-2 .room-card-wrapper-two .room-card {
   margin-top: 0;
 }
@@ -74776,6 +74831,16 @@ ul.children {
 .room_and_suites.style-2 .room-card-wrapper-two .slick-track {
   margin: 0;
   margin-left: -70px;
+}
+@media (max-width: 1599px) {
+  .room_and_suites.style-2 .room-card-wrapper-two .slick-track {
+    margin-left: 0;
+  }
+}
+@media only screen and (min-width: 1200px) and (max-width: 1399px) {
+  .room_and_suites.style-2 .room-card-wrapper-two .slick-track {
+    margin-left: 110px;
+  }
 }
 
 @media only screen and (min-width: 0px) and (max-width: 576px) {
