--- a/sass/pages/_home-two.scss
+++ b/sass/pages/_home-two.scss
@@ -74,16 +74,50 @@
   &.style-2 {
     position: relative;
     overflow: hidden;
+    @include xl {
+      padding-bottom: 120px;
+    }
+    @include lg {
+      padding-top: 60px;
+      padding-bottom: 100px;
+    }
+    @include md {
+      padding-top: 60px;
+      padding-bottom: 80px;
+    }
+    @include sm {
+      padding-top: 60px;
+      padding-bottom: 80px;
+    }
     .bg-image {
       position: absolute;
       right: 0;
       top: 0;
+      @include rmaxwd(1399) {
+        width: 50%;
+        height: 100%;
+      }
+      @include rmaxwd(1399) {
+        img {
+          width: 100%;
+          height: 100%;
+        }
+      }
+      @include rmaxwd(991) {
+        display: none;
+      }
     }
     .banner-text {
       position: absolute;
       left: 0;
       bottom: 0;
       transform: translate(50px, 50px);
+      @include rmaxwd(1399) {
+        transform: translate(50px, 30px);
+      }
+      @include rmaxwd(991) {
+        transform: translate(50px, 0);
+      }
       p {
         transform: none;
       }
@@ -94,6 +128,9 @@
     .room-card-wrapper-two {
       margin-top: 0;
       padding-left: 250px;
+      @include rmaxwd(1699) {
+        padding-left: 0;
+      }
       .room-card {
         margin-top: 0;
       }
@@ -103,6 +140,12 @@
       .slick-track {
         margin: 0;
         margin-left: -70px;
+        @include rmaxwd(1599) {
+          margin-left: 0;
+        }
+        @include xl {
+          margin-left: 110px;
+        }
       }
     }
   }
