--- a/css/style.css
+++ b/css/style.css
@@ -66059,7 +66059,7 @@ body.admin-bar .header-area.style-7 {
   position: relative;
 }
 
-.info-card.style-1 {
+.info-card {
   padding: 22px 50px;
   display: flex;
   flex-direction: column;
@@ -66072,18 +66072,18 @@ body.admin-bar .header-area.style-7 {
   transition: all 0.5s ease-out;
 }
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
-  .info-card.style-1 {
+  .info-card {
     padding: 20px 30px;
   }
 }
-.info-card.style-1 .content .title {
+.info-card .content .title {
   color: #ffffff;
   font-size: 20px;
   font-style: normal;
   font-weight: 400;
   line-height: 30px; /* 150% */
 }
-.info-card.style-1 .content p {
+.info-card .content p {
   color: #ffffff;
   color: #808287;
   font-size: 16px;
@@ -66093,83 +66093,45 @@ body.admin-bar .header-area.style-7 {
   margin-bottom: 0;
   margin-top: 3px;
 }
-.info-card.style-1:hover {
+.info-card:hover {
   transition: all 0.5s ease-out;
   border-color: rgba(255, 255, 255, 0.25);
 }
 
 .info-card.style-2 {
-  padding: 40px;
-  border: 1px solid #d0d0d0;
-  transition: all 0.5s ease-out;
-  top: 0;
-  position: relative;
+  padding: 62px 80px;
+  background-color: transparent;
+  border-radius: 5px;
+  border: 1px dashed rgba(34, 34, 34, 0.2);
 }
-@media only screen and (min-width: 1200px) and (max-width: 1399px) {
+@media (max-width: 1399px) {
   .info-card.style-2 {
-    padding: 30px 20px;
+    padding: 32px;
   }
 }
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
-  .info-card.style-2 {
-    padding: 40px 30px;
+.info-card.style-2.image {
+  padding: 0;
+  border: none;
+  overflow: hidden;
+}
+@media (max-width: 1199px) {
+  .info-card.style-2.image {
+    height: 100%;
   }
 }
-@media only screen and (min-width: 0px) and (max-width: 767px) {
-  .info-card.style-2 {
-    padding: 30px 24px;
+@media (max-width: 1199px) {
+  .info-card.style-2.image img {
+    height: 100%;
   }
 }
 .info-card.style-2:hover {
-  transition: all 0.5s ease-out;
-  border-color: transparent;
-  background-color: #ffffff;
-  box-shadow: 0 0 18px 3px rgba(0, 0, 0, 0.05);
-  top: -5px;
+  border-color: #aa8453;
 }
-.info-card.style-2 .title-wrapper {
-  gap: 15px;
-  padding-bottom: 20px;
-}
-.info-card.style-2 .title-wrapper .icon-wrapper {
-  padding-right: 6px;
-  margin-top: -10px;
-}
-.info-card.style-2 .title-wrapper .icon {
-  width: 65px;
-  height: 65px;
-}
-.info-card.style-2 .counter-number-wrapper .counter-number {
-  font-size: 68px;
-  font-weight: 700;
-  line-height: 78.2px;
-  color: #ffffff;
-  -webkit-text-stroke: 2px black;
-  -webkit-text-fill-color: rgba(255, 255, 255, 0);
-  opacity: 0.3;
-}
-.info-card.style-2 .content {
-  gap: 20px;
-}
-.info-card.style-2 .content .read-more {
-  display: flex;
-  justify-content: space-between;
-}
-.info-card.style-2 .content .read-more a {
-  font-family: "Gilda Display", serif;
-  font-size: 16px;
-  letter-spacing: 1.28px;
-  text-transform: uppercase;
-  line-height: 32px;
-  font-weight: 700;
-  gap: 10px;
+.info-card.style-2 .content .title {
   color: #222;
-  display: flex;
-  align-items: center;
 }
-.info-card.style-2 .content .read-more a:hover i {
-  color: #aa8453;
-  transition: all 0.5s ease-out;
+.info-card.style-2 .content p {
+  color: #808287;
 }
 
 .info-card.style-3 {
@@ -74810,6 +74772,12 @@ ul.children {
 .room_and_suites.style-2 .banner-text p {
   transform: none;
 }
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .room_and_suites.style-2 .banner-text p {
+    font-size: 100px;
+    transform: translate(0, 10%);
+  }
+}
 .room_and_suites.style-2 .room-card-slider-container {
   position: relative;
 }
@@ -74841,6 +74809,10 @@ ul.children {
   .room_and_suites.style-2 .room-card-wrapper-two .slick-track {
     margin-left: 110px;
   }
+}
+
+.service-area.style-2:before {
+  display: none;
 }
 
 @media only screen and (min-width: 0px) and (max-width: 576px) {
