--- a/sass/modules/info-card/_info-card-two.scss
+++ b/sass/modules/info-card/_info-card-two.scss
@@ -1,80 +1,35 @@
 .info-card {
-    &.style-2 {
-        padding: 40px;
-        border: 1px solid $gray-200;
-        @include transition;
-        top: 0;
-        position: relative;
-        @include xl{
-            padding: 30px 20px;
-        }
-        @include lg{
-            padding: 40px 30px;
-        }
-        @include sm{
-            padding: 30px 24px;
-        }
-        &:hover {
-            @include transition;
-            border-color: transparent;
-            background-color: $white;
-            box-shadow: 0 0 18px 3px rgba(0, 0, 0, 0.05);
-            top: -5px;
-        }
-        .title-wrapper {
-            gap: 15px;
-            padding-bottom: 20px;
-            .icon-wrapper {
-                padding-right: 6px;
-                margin-top: -10px;
-            }
-            .icon {
-                width: 65px;
-                height: 65px;
-            }
-        }
-        .counter-number-wrapper {
-
-            .counter-number{
-                font-size: 68px;
-                font-weight: 700;
-                line-height: 78.2px;
-                color: $white;
-                -webkit-text-stroke: 2px black;
-                -webkit-text-fill-color: rgba(255, 255, 255, 0);
-                opacity: 0.3;
-            }
-        }
-
-        .content {
-            gap: 20px;
-            .read-more {
-                display: flex;
-                justify-content: space-between;
-                a {
-                   
-                    font-family: $heading-font;
-                    font-size: 16px;
-                    letter-spacing: 1.28px;
-                    text-transform: uppercase;
-                    line-height: 32px;
-                    font-weight: 700;
-                    gap: 10px;
-                    color: $black;
-                    display: flex;
-                    align-items: center;
-                    
-                 
-                
-                    &:hover {
-                        i {
-                            color: $primary-color;
-                            @include transition;
-                        }
-    
-                    }
-                }
-            }
-        }
+  &.style-2 {
+    padding: 62px 80px;
+    background-color: transparent;
+    border-radius: 5px;
+    border: 1px dashed rgba(34, 34, 34, 0.2);
+    @include rmaxwd(1399) {
+      padding: 32px;
     }
+    &.image {
+      padding: 0;
+      border: none;
+      overflow: hidden;
+      @include rmaxwd(1199) {
+        height: 100%;
+      }
+      img {
+        @include rmaxwd(1199) {
+          height: 100%;
+        }
+      }
+    }
+    &:hover {
+      border-color: $primary-color;
+    }
+    .content {
+      .title {
+        color: $black;
+      }
+      p {
+        color: $gray;
+      }
+    }
+  }
 }
