--- a/sass/partials/_header-two.scss
+++ b/sass/partials/_header-two.scss
@@ -22,6 +22,10 @@
               @include transition;
             }
           }
+          .logo-wrapper {
+            visibility: visible;
+            opacity: 1;
+          }
         }
       }
       .header-top {
