--- a/sass/pages/_home-two.scss
+++ b/sass/pages/_home-two.scss
@@ -164,6 +164,58 @@
   }
 }
 
+// Price area Style-1
+.price-area {
+  &.style-1 {
+    position: relative;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    &:before {
+      content: '';
+      background-color: rgba(49, 43, 43, 0.8);
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+    }
+    .price-card-wrapper {
+      position: relative;
+      @include sm {
+        // margin: 230px 0;
+      }
+      @include xs {
+        margin: 0;
+      }
+      .image {
+        @include xl {
+          height: 500px;
+        }
+        @include lg {
+          height: 500px;
+        }
+        @include sm {
+          display: none;
+        }
+      }
+      .price-card {
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 1;
+        width: 336px;
+        @include md {
+          position: relative;
+        }
+        @include sm {
+          position: relative;
+        }
+      }
+    }
+  }
+}
+
 .video-popup-area {
   &.style-2 {
     .video-popup-image {
