add: testimonial-area style-2

--- a/sass/partials/_title-section.scss
+++ b/sass/partials/_title-section.scss
@@ -139,6 +139,16 @@
     color: $gray;
   }
   &.style-2 {
+    justify-content: center;
+    .sec-content {
+      align-items: center;
+      text-align: center;
+    }
+    .title {
+      margin-bottom: 0;
+    }
+  }
+  &.style-3 {
     display: unset;
     .short-title {
       color: $primary-color;
