--- a/css/style.css
+++ b/css/style.css
@@ -73841,18 +73841,28 @@ body.admin-bar .header-area.style-7 {
   color: #808287;
 }
 .section-title.style-2 {
+  justify-content: center;
+}
+.section-title.style-2 .sec-content {
+  align-items: center;
+  text-align: center;
+}
+.section-title.style-2 .title {
+  margin-bottom: 0;
+}
+.section-title.style-3 {
   display: unset;
 }
-.section-title.style-2 .short-title {
+.section-title.style-3 .short-title {
   color: #aa8453;
 }
-.section-title.style-2 .title,
-.section-title.style-2 .sec-desc {
+.section-title.style-3 .title,
+.section-title.style-3 .sec-desc {
   color: #ffffff;
 }
 @media (max-width: 1399px) {
-  .section-title.style-2 .title br,
-  .section-title.style-2 .sec-desc br {
+  .section-title.style-3 .title br,
+  .section-title.style-3 .sec-desc br {
     display: none;
   }
 }
@@ -77030,106 +77040,73 @@ body.admin-bar .header-area.style-7 {
 }
 
 .testimonial-card.style-2 {
-  flex-direction: row;
-  gap: 110px;
-  padding: 40px 81px 48px 40px;
-  margin-left: 2px;
+  position: relative;
+  margin: 0 12px;
 }
-@media only screen and (min-width: 1200px) and (max-width: 1399px) {
-  .testimonial-card.style-2 {
-    padding-right: 40px;
-  }
+.testimonial-card.style-2:after {
+  content: "";
+  background-color: #232323;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  bottom: -20px;
+  right: -20px;
+  z-index: 1;
 }
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
-  .testimonial-card.style-2 {
-    padding: 40px 80px 40px 40px;
-  }
+.testimonial-card.style-2 .quote {
+  position: absolute;
+  right: 30px;
+  top: 0;
+  z-index: 3;
+  transform: translateY(-50%);
 }
-@media only screen and (min-width: 1200px) and (max-width: 1399px) {
-  .testimonial-card.style-2 {
-    gap: 40px;
-    align-items: flex-start;
-  }
+.testimonial-card.style-2 .content-wrapper {
+  padding: 30px 40px;
+  background-color: #323232;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  text-align: start;
+  z-index: 2;
 }
-@media only screen and (min-width: 0px) and (max-width: 767px) {
-  .testimonial-card.style-2 {
-    padding-right: 50px;
-    flex-direction: column;
-    gap: 24px;
-  }
+.testimonial-card.style-2 .content-wrapper .stars i {
+  color: #f2c94c;
 }
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .testimonial-card.style-2 {
-    gap: 40px;
-  }
-}
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
-  .testimonial-card.style-2 {
-    padding-right: 50px;
-    flex-direction: column;
-    gap: 24px;
-  }
-}
-.testimonial-card.style-2 .user-info-wrapper {
-  margin-top: 2px;
-}
-@media only screen and (min-width: 1200px) and (max-width: 1399px) {
-  .testimonial-card.style-2 .user-info-wrapper {
-    gap: 12px;
-  }
-}
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
-  .testimonial-card.style-2 .user-info-wrapper {
-    gap: 12px;
-  }
-}
-@media only screen and (min-width: 1200px) and (max-width: 1399px) {
-  .testimonial-card.style-2 .user-info-wrapper .user-meta .designation {
-    margin: 0;
-  }
-}
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
-  .testimonial-card.style-2 .user-info-wrapper .user-meta .designation {
-    margin: 0;
-  }
-}
-.testimonial-card.style-2 .content-wrapper .desc {
-  font-family: "Barlow Condensed", sans-serif;
-  font-size: 22px;
+.testimonial-card.style-2 .content-wrapper p {
+  margin-bottom: 0;
+  font-size: 16px;
   font-style: normal;
   font-weight: 400;
-  line-height: 40px;
+  line-height: 29px;
+  color: #ffffff;
+  text-transform: lowercase;
+  letter-spacing: unset;
+}
+.testimonial-card.style-2 .meta-user {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+.testimonial-card.style-2 .meta-user .content .title,
+.testimonial-card.style-2 .meta-user .content .desc {
   margin-bottom: 0;
 }
-@media only screen and (min-width: 1200px) and (max-width: 1399px) {
-  .testimonial-card.style-2 .content-wrapper .desc {
-    font-size: 18px;
-    line-height: 30px;
-  }
+.testimonial-card.style-2 .meta-user .content .title {
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-transform: uppercase;
+  color: #ffffff;
+  margin-top: 5px;
 }
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
-  .testimonial-card.style-2 .content-wrapper .desc {
-    font-size: 20px;
-    line-height: 34px;
-  }
-}
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .testimonial-card.style-2 .content-wrapper .desc {
-    font-size: 18px;
-    line-height: 26px;
-  }
-}
-@media only screen and (min-width: 0px) and (max-width: 767px) {
-  .testimonial-card.style-2 .content-wrapper .desc {
-    font-size: 18px;
-    line-height: 30px;
-  }
-}
-@media only screen and (min-width: 0px) and (max-width: 576px) {
-  .testimonial-card.style-2 .content-wrapper .desc {
-    font-size: 14px;
-    line-height: 30px;
-  }
+.testimonial-card.style-2 .meta-user .content .desc {
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  color: #aa8453;
+  text-transform: initial;
 }
 
 .testimonial-card.style-3 {
@@ -79486,18 +79463,28 @@ body.admin-bar .header-area.style-7 {
   color: #808287;
 }
 .section-title.style-2 {
+  justify-content: center;
+}
+.section-title.style-2 .sec-content {
+  align-items: center;
+  text-align: center;
+}
+.section-title.style-2 .title {
+  margin-bottom: 0;
+}
+.section-title.style-3 {
   display: unset;
 }
-.section-title.style-2 .short-title {
+.section-title.style-3 .short-title {
   color: #aa8453;
 }
-.section-title.style-2 .title,
-.section-title.style-2 .sec-desc {
+.section-title.style-3 .title,
+.section-title.style-3 .sec-desc {
   color: #ffffff;
 }
 @media (max-width: 1399px) {
-  .section-title.style-2 .title br,
-  .section-title.style-2 .sec-desc br {
+  .section-title.style-3 .title br,
+  .section-title.style-3 .sec-desc br {
     display: none;
   }
 }
@@ -84087,55 +84074,72 @@ ul.children {
   transform: translateY(-50%);
 }
 
-.about-us-area.style-2 {
+.testimonial-slider-area.style-2 {
+  position: relative;
+  background-color: rgba(49, 43, 43, 0.9215686275);
+}
+.testimonial-slider-area.style-2 .bg-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+.testimonial-slider-area.style-2 .bg-image img {
+  width: 100%;
+  height: 100%;
+}
+
+.about-us-area.style-3 {
   position: relative;
 }
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
-  .about-us-area.style-2 {
+  .about-us-area.style-3 {
     padding-bottom: 100px;
   }
 }
 @media only screen and (min-width: 768px) and (max-width: 991px) {
-  .about-us-area.style-2 {
+  .about-us-area.style-3 {
     padding-bottom: 80px;
   }
 }
 @media only screen and (min-width: 0px) and (max-width: 767px) {
-  .about-us-area.style-2 {
+  .about-us-area.style-3 {
     padding-bottom: 60px;
   }
 }
-.about-us-area.style-2 .bg-image {
+.about-us-area.style-3 .bg-image {
   position: absolute;
   bottom: 0;
   right: 0;
 }
 @media (max-width: 1900px) {
-  .about-us-area.style-2 .bg-image {
+  .about-us-area.style-3 .bg-image {
     display: none;
   }
 }
-.about-us-area.style-2 .about-image-card .main-img {
+.about-us-area.style-3 .about-image-card .main-img {
   width: auto;
   height: auto;
   max-height: 431px;
 }
-.about-us-area.style-2 .about-image-card .main-img img {
+.about-us-area.style-3 .about-image-card .main-img img {
   height: auto;
   max-height: 431px;
 }
 @media (min-width: 1900px) {
-  .about-us-area.style-2 .about-info-card.style-2 {
+  .about-us-area.style-3 .about-info-card.style-2 {
     padding-left: 150px;
   }
 }
 @media (min-width: 1900px) {
-  .about-us-area.style-2 .about-info-card.style-2 .about-info-content {
+  .about-us-area.style-3 .about-info-card.style-2 .about-info-content {
     gap: 60px;
   }
 }
 @media (min-width: 1900px) {
-  .about-us-area.style-2 .btn-wrapper .inner-wrapper {
+  .about-us-area.style-3 .btn-wrapper .inner-wrapper {
     padding-top: 60px;
   }
 }
@@ -84372,81 +84376,6 @@ ul.children {
 }
 .cta-area.style-2 .btn-wrapper {
   margin-left: -10px;
-}
-
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .testimonial-slider-area.style-2 {
-    padding: 100px 0;
-  }
-}
-@media only screen and (min-width: 0px) and (max-width: 767px) {
-  .testimonial-slider-area.style-2 {
-    padding: 80px 0;
-  }
-}
-.testimonial-slider-area.style-2 .section-title {
-  flex-direction: column;
-  align-items: flex-start;
-  margin-bottom: 0px;
-  gap: 0px;
-}
-@media only screen and (min-width: 0px) and (max-width: 767px) {
-  .testimonial-slider-area.style-2 .section-title {
-    gap: 30px;
-  }
-}
-.testimonial-slider-area.style-2 .section-title .slider-nav-btn-wrapper .slider-nav-prev-btn,
-.testimonial-slider-area.style-2 .section-title .slider-nav-btn-wrapper .slider-nav-next-btn {
-  width: 60px;
-  height: 60px;
-  background-color: rgba(217, 161, 76, 0.1);
-  color: #aa8453;
-  font-size: 16px;
-  box-shadow: none;
-  transition: all 0.5s ease-out;
-}
-.testimonial-slider-area.style-2 .section-title .slider-nav-btn-wrapper .slider-nav-prev-btn:hover,
-.testimonial-slider-area.style-2 .section-title .slider-nav-btn-wrapper .slider-nav-next-btn:hover {
-  background-color: #aa8453;
-  color: #ffffff;
-  transition: all 0.5s ease-out;
-}
-.testimonial-slider-area.style-2 .section-title .sec-content {
-  margin-bottom: 28px;
-  gap: 10px;
-}
-@media only screen and (min-width: 0px) and (max-width: 767px) {
-  .testimonial-slider-area.style-2 .section-title .sec-content {
-    margin-bottom: 0;
-  }
-}
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .testimonial-slider-area.style-2 .section-title .sec-content .title {
-    margin-bottom: 0;
-    padding-right: 236px;
-  }
-}
-@media only screen and (min-width: 0px) and (max-width: 767px) {
-  .testimonial-slider-area.style-2 .section-title .sec-content .title {
-    margin-bottom: 0;
-  }
-}
-.testimonial-slider-area.style-2 .section-title .short-title {
-  margin-bottom: 0;
-}
-.testimonial-slider-area.style-2 .section-title .slider-nav-btn-wrapper {
-  gap: 20px;
-}
-.testimonial-slider-area.style-2 .testimonial-card.style-2 {
-  padding: 40px;
-  padding-right: 80px;
-}
-.testimonial-slider-area.style-2 #testimonial_style_two .slick-prev,
-.testimonial-slider-area.style-2 #testimonial_style_two .slick-next {
-  display: none !important;
-}
-.testimonial-slider-area.style-2 #testimonial_style_two .slick-arrow {
-  display: none !important;
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
