--- a/sass/modules/testimonial-card/_testimonial-card-two.scss
+++ b/sass/modules/testimonial-card/_testimonial-card-two.scss
@@ -1,83 +1,73 @@
 .testimonial-card {
   &.style-2 {
-    flex-direction: row;
-    gap: 110px;
-    padding: 40px 81px 48px 40px;
-    margin-left: 2px;
-    @include xl{
-      padding-right: 40px;
+    position: relative;
+    margin: 0 12px;
+    &:after {
+      content: '';
+      background-color: #232323;
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      bottom: -20px;
+      right: -20px;
+      z-index: 1;
     }
-    @include lg {
-      padding: 40px 80px 40px 40px;
+    .quote {
+      position: absolute;
+      right: 30px;
+      top: 0;
+      z-index: 3;
+      transform: translateY(-50%);
     }
-
-    @include xl {
-      gap: 40px;
-      align-items: flex-start;
-    }
-
-    @include sm {
-      padding-right: 50px;
+    .content-wrapper {
+      padding: 30px 40px;
+      background-color: #323232;
+      display: flex;
       flex-direction: column;
-      gap: 24px;
-    }
-    @include md {
-      gap: 40px;
-    }
-    @include lg {
-      padding-right: 50px;
-      flex-direction: column;
-      gap: 24px;
-    }
-
-    .user-info-wrapper {
-      margin-top: 2px;
-      @include xl{
-        gap: 12px;  
-      }
-      @include lg{
-        gap: 12px;  
-      }
-      .user-meta{
-        .designation{
-          @include xl{
-            margin: 0;
-          }
-          @include lg{
-            margin: 0;
-          }
+      gap: 20px;
+      text-align: start;
+      z-index: 2;
+      .stars {
+        i {
+          color: #f2c94c;
         }
       }
-    }
-
-    .content-wrapper{
-      .desc{
-        font-family: $body-font;
-        font-size: 22px;
+      p {
+        margin-bottom: 0;
+        font-size: 16px;
         font-style: normal;
         font-weight: 400;
-        line-height: 40px;
-        margin-bottom: 0;
-
-        @include xl {
+        line-height: 29px;
+        color: $white;
+        text-transform: lowercase;
+        letter-spacing: unset;
+      }
+    }
+    .meta-user {
+      display: flex;
+      align-items: center;
+      gap: 20px;
+      .content {
+        .title,
+        .desc {
+          margin-bottom: 0;
+        }
+        .title {
           font-size: 18px;
-          line-height: 30px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: normal;
+          text-transform: uppercase;
+          color: $white;
+          margin-top: 5px;
         }
-        @include lg {
-          font-size: 20px;
-          line-height: 34px;
-        }
-        @include md {
-          font-size: 18px;
-          line-height: 26px;
-        }
-        @include sm {
-          font-size: 18px;
-          line-height: 30px;
-        }
-        @include xs {
-          font-size: 14px;
-          line-height: 30px;
+        .desc {
+          font-size: 12px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: normal;
+          color: $primary-color;
+          text-transform: initial;
         }
       }
     }
