--- a/sass/pages/_home-two.scss
+++ b/sass/pages/_home-two.scss
@@ -226,9 +226,38 @@
   }
 }
 
-// About us area style-2
-.about-us-area {
+// Testimonial area style-2
+.testimonial-slider-area {
   &.style-2 {
+    position: relative;
+    background-color: #312b2beb;
+    // &:before {
+    //   content: '';
+    //   width: 100%;
+    //   height: 100%;
+    //   position: absolute;
+    //   top: 0;
+    //   left: 0;
+    //   background-color: #312b2b8c;
+    // }
+    .bg-image {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+      img {
+        width: 100%;
+        height: 100%;
+      }
+    }
+  }
+}
+
+// About us area style-3
+.about-us-area {
+  &.style-3 {
     position: relative;
     @include lg {
       padding-bottom: 100px;
@@ -504,84 +533,6 @@
     }
     .btn-wrapper {
       margin-left: -10px;
-    }
-  }
-}
-.testimonial-slider-area {
-  &.style-2 {
-    @include md {
-      padding: 100px 0;
-    }
-    @include sm {
-      padding: 80px 0;
-    }
-    .section-title {
-      flex-direction: column;
-      align-items: flex-start;
-      margin-bottom: 0px;
-      gap: 0px;
-
-      @include sm {
-        gap: 30px;
-      }
-
-      .slider-nav-btn-wrapper {
-        .slider-nav-prev-btn,
-        .slider-nav-next-btn {
-          width: 60px;
-          height: 60px;
-          background-color: rgba(217, 161, 76, 0.1);
-          color: $primary-color;
-          font-size: 16px;
-          box-shadow: none;
-          @include transition;
-
-          &:hover {
-            background-color: $primary-color;
-            color: $white;
-            @include transition;
-          }
-        }
-      }
-      .sec-content {
-        margin-bottom: 28px;
-        gap: 10px;
-
-        @include sm {
-          margin-bottom: 0;
-        }
-        .title {
-          @include md {
-            margin-bottom: 0;
-            padding-right: 236px;
-          }
-          @include sm {
-            margin-bottom: 0;
-          }
-        }
-      }
-
-      .short-title {
-        margin-bottom: 0;
-      }
-      .slider-nav-btn-wrapper {
-        gap: 20px;
-      }
-    }
-    .testimonial-card {
-      &.style-2 {
-        padding: 40px;
-        padding-right: 80px;
-      }
-    }
-    #testimonial_style_two {
-      .slick-prev,
-      .slick-next {
-        display: none !important;
-      }
-      .slick-arrow {
-        display: none !important;
-      }
     }
   }
 }
